--- a/perfil/perfil.component.html
+++ b/perfil/perfil.component.html
@@ -2,7 +2,7 @@
   <div class="content-block">
     <div class="block-header">
       <!-- breadcrumb -->
-      <app-breadcrumb [title]="'Dashboard'" [items]="['Home']" [active_item]="'Dashboard'"></app-breadcrumb>
+      <app-breadcrumb [title]="'Alumno'" [items]="['Home']" [active_item]="'Alumnos'"></app-breadcrumb>
     </div>
     
     
